--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -59,7 +59,7 @@ table {
     overflow-y: hidden;
 }
 
-.list-move, /* apply transition to moving elements */
+.list-move,
 .list-enter-active,
 .list-leave-active {
     transition: all 0.5s ease;
@@ -71,8 +71,6 @@ table {
     transform: translateX(30px);
 }
 
-/* ensure leaving items are taken out of layout flow so that moving
-   animations can be calculated correctly. */
 .list-leave-active {
     position: absolute;
 }
@@ -81,7 +79,7 @@ table {
 .expand-enter-active,
 .expand-leave-active {
     transition: all 0.2s;
-    max-height: 290px;
+    max-height: 320px;
 }
 
 .expand-enter-from,
